# kite-wind

./: .gitignore
Feather9x_RX/: Feather9x_RX.ino
Feather9x_TX/: Feather9x_TX.ino
proxy/: .env.sample  README.md  kitewind.service  main.py  pyproject.toml  requirements.txt
